# CoffeCrawler

./: .gitignore  CONTRIBUTION.md  FACT  LICENSE  LICENSE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  stucture.project
coffecrawler/: __init__.py  cli.py  exceptions.py
coffecrawler/agents/: __init__.py  bot_agent.py  human_emulator.py  rotation_manager.py  strategy_selector.py
coffecrawler/config/: presets.py
coffecrawler/core/: __init__.py  crawler_engine.py  engine_router.py  headless_browser.py  http_client.py  parser_engine.py  session_manager.py
coffecrawler/plugins/: SpeedForce.cpp  __init__.py  browser_plugins.py  init.py  setup_speedforce.py
coffecrawler/utils/: __init__.py  anti_detection.py  cache_manager.py  data_extractor.py  debug_fixer.py  helpers.py  performance_optimizer.py
tests/: test_http_client.py
