[build-system]
requires = [
    "setuptools>=68.0",
    "wheel>=0.40.0",
    "setuptools_scm>=8.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "coffecrawler"
dynamic = ["version"]
description = "☕ Next-Generation AI-Powered Web Crawling1 Library - Smart, Adaptive, Revolutionary"
authors = [
    {name = "Ldeveloper-Ui", email = "vlskthegamer@gmail.com"},
]
maintainers = [
    {name = "Ldeveloper-Ui", email = "vlskthegamer@gmail.com"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = [
    "web-crawler",
    "web-scraping", 
    "automation",
    "ai",
    "artificial-intelligence",
    "headless-browser",
    "data-extraction",
    "bot",
    "crawler",
    "parsing",
    "termux",
    "android",
    "anti-detection"
]
classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",
    
    # Intended Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    
    # License
    "License :: OSI Approved :: MIT License",
    
    # Operating System
    "Operating System :: OS Independent",
    "Operating System :: Android",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    
    # Programming Language
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    
    # Topics
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
]

dependencies = [
    # HTTP & Networking
    "requests>=2.31.0; python_version>='3.7'",
    "aiohttp>=3.9.0; python_version>='3.7'",
    "urllib3>=2.0.0; python_version>='3.7'",
    
    # HTML Parsing
    "beautifulsoup4>=4.12.0; python_version>='3.7'",
    "lxml>=4.9.0; python_version>='3.7'",
    "html5lib>=1.1; python_version>='3.7'",
    
    # Browser Automation
    "selenium>=4.15.0; python_version>='3.7'",
    "webdriver-manager>=4.0.0; python_version>='3.7'",
    
    # User Agent & Headers
    "fake-useragent>=1.4.0; python_version>='3.7'",
    "python-user-agents>=2.2.0; python_version>='3.7'",
    
    # Async & Performance
    "aiofiles>=23.0.0; python_version>='3.7'",
    "asyncio-throttle>=1.0.0; python_version>='3.7'",
    
    # Data Processing
    "pyquery>=2.0.0; python_version>='3.7'",
    "cssselect>=1.2.0; python_version>='3.7'",
    
    # Utilities
    "click>=8.1.0; python_version>='3.7'",
    "colorama>=0.4.6; python_version>='3.7'",
    "tqdm>=4.66.0; python_version>='3.7'",
    "loguru>=0.7.0; python_version>='3.7'",
]

[project.optional-dependencies]
# Development & Testing
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-autorefs>=0.5.0",
]

# Advanced AI Features
ai = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
]

# Security & Cryptography
security = [
    "cryptography>=41.0.0",
    "pyopenssl>=23.2.0",
]

# Mobile & Termux Optimization
mobile = [
    "termux-api>=1.1.0",
    "android-net-tools>=0.1.0",
]

# Performance & Caching
performance = [
    "redis>=5.0.0",
    "pymongo>=4.5.0",
    "sqlalchemy>=2.0.0",
]

# Export & Data Formats
export = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
]

# Full installation (everything except dev tools)
full = [
    "coffecrawler[ai,security,mobile,performance,export]"
]

[project.urls]
Homepage = "https://github.com/Ldeveloper-Ui/CoffeCrawler"
Documentation = "https://ldeveloper-ui.github.io/CoffeCrawler/"
Repository = "https://github.com/Ldeveloper-Ui/CoffeCrawler"
"Bug Reports" = "https://github.com/Ldeveloper-Ui/CoffeCrawler/issues"
"Source Code" = "https://github.com/Ldeveloper-Ui/CoffeCrawler"
"Download" = "https://pypi.org/project/coffecrawler/"
"Release Notes" = "https://github.com/Ldeveloper-Ui/CoffeCrawler/releases"
"Chat & Support" = "https://github.com/Ldeveloper-Ui/CoffeCrawler/discussions"

[project.scripts]
coffecrawler = "coffecrawler.cli:main"
coffe-cli = "coffecrawler.cli:main"

[project.entry-points."coffecrawler.plugins"]
browser = "coffecrawler.plugins.browser_plugins:PluginManager"
extractor = "coffecrawler.plugins.extraction_plugins:PluginManager"
ai = "coffecrawler.plugins.ai_plugins:PluginManager"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["coffecrawler*"]
exclude = [
    "test*",
    "testing*", 
    "docs*",
    "examples*",
    "benchmarks*"
]

[tool.setuptools.package-data]
"coffecrawler" = [
    "py.typed",
    "config/*.json",
    "data/*.json",
    "agents/profiles/*.yml"
]

[tool.setuptools_scm]
write_to = "coffecrawler/_version.py"
write_to_template = '__version__ = "{version}"'
version_scheme = "release-branch-semver"

[tool.black]
target-version = ['py38']
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | notebooks
  # files
  | setup\.py
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["coffecrawler"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--verbose --color=yes --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
]

[metadata]
license_files = [
    "LICENSE",
    "LICENSE.md", 
    "LICENSE.txt",
    "licenses/*"
]
